search功能页面完成

--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=emulateIE7" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>详情| mtianyan-search搜索引擎</title>
+<title>详情| Gtw搜索引擎</title>
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/result.css' %}" rel="stylesheet" type="text/css" />
 </head>
@@ -29,8 +29,7 @@
         <div id="main">
         	<div class="sideBar">
             	
-                <div class="subfield">数据来源: </br>
-                实时已爬取数据统计</div>
+                <div class="subfield">爬取数据源数量: </div>
                 <ul class="subfieldContext">
                 	<li>
                     	<span class="name">伯乐在线</span>
@@ -127,7 +126,7 @@
     </div><!--End of bd-->
 </div>
 
-<div id="foot">Copyright &copy;search.mtianyan.cn 版权所有  E-mail:search@mtianyan.cn</div>
+<div id="foot">Copyright &copy;GTW 版权所有</div>
 </body>
 <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/global.js' %}"></script>
