--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <meta name="baidu-site-verification" content="nPxypLjNNn" />
 <meta http-equiv="X-UA-Compatible" content="IE=emulateIE7" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>GTW 搜索引擎</title>
+<title>Gtw搜索引擎</title>
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/index.css' %}" rel="stylesheet" type="text/css" />
 </head>
@@ -14,7 +14,7 @@
 	<div id="bd">
         <div id="main">
         	<h1 class="title">
-            	<a href="https://www.jianshu.com/u/db9a7a0daa1f"><div class="logo large"></div></a>
+            	<a href="https://gtwlover.gitee.io/"><div class="logo large"></div></a>
             </h1>
             <div class="nav ue-clear">
             	<ul class="searchList">
@@ -58,7 +58,7 @@
 
     <div class="foot">
     	<div class="wrap">
-            <div class="copyright">Copyright &copy;search.mtianyan.cn 版权所有  E-mail:search@mtianyan.cn</div>
+            <div class="copyright">Copyright &copy;GTW 版权所有</div>
         </div>
     </div>
 </div>
